--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header div {
 }
 
 main section {
-  animation: fromLeft .7s backwards;
+  animation: fromBottom .7s backwards;
 }
 
 main section:nth-child(1) {
@@ -140,14 +140,14 @@ main section:nth-child(3) {
   }
 }
 
-@keyframes fromLeft {
+@keyframes fromBottom {
   from {
     opacity: 0;
-    transform: translateX(-30px);
+    transform: translateY(-30px);
   }
 
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
