change bg image name

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ ul {
 
 body {
   background-color: #121214;
-  background-image: url(./assets/bg.jpg);
+  background-image: url(./assets/imagebg.jpg);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100% auto;
